Fixed existing libraries not showing up

--- a/app/phasarr/static/css/main.css
+++ b/app/phasarr/static/css/main.css
@@ -1223,12 +1223,21 @@ video {
   line-height: 1.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-medium {
   font-weight: 500;
 }
 
 .font-thin {
   font-weight: 100;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .leading-6 {
